# sanitizer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
sanitizer/: __init__.py  exceptions.py  schema.py
tests/: test_bool_type.py  test_disallowed_fields.py  test_float_type.py  test_int_type.py  test_list_type.py  test_missing_fields.py  test_nested_schemas.py  test_str_type.py  test_validators.py
usecases/: basic.py  car.py  error_mapping.py  human.py  validators.py
