[project]
name = "sanitizer"
version = "0.1.0"
description = ""
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.ruff]
target-version = "py313"
line-length = 120
lint.select = [
    "I", # isort
    "Q",
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "UP", # pyupgrade
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "S", # flake8-bandit
    "ISC", # flake8-implicit-str-concat
    "T20", # print and pprint
    "ANN", # flake8-annotations
    "TCH", # flake8-type-checking
    "PT", # flake8-pytest-style
    "RUF", # ruff-specific rules
    "PT", # Pytest style
    "C90", # mccabe
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "F821", ## checks for uses of undefined names, breaks sqlalchemy models
    "UP007", # large models are unreadable
    "UP032", # allows str .format
    "ANN401", # allows type Any
    "RUF012", # typing.ClassVar
    "RUF002", # docstring contains ambiguous
    "RUF001",
    "RUF003",
    "RUF100", # Unused `noqa` directive
    "W291", # Trailing whitespace
    "TC003", # Type-checking block
    "F401",
    "S101"
]
